--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <meta property="og:image" content="https:/hoonsbory.github.io/MyGitPage/images/thumbnail.png" />
+  <meta property="og:image" content="https://i.imgur.com/9OAAV4A.png" />
   <meta property="og:url" content="https://hoonsbory.github.io/MyGitPage" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="개발자 신재훈의 포트폴리오입니다" />
-  <meta property="og:description" content="개발자 신재훈의 포트폴리오입니다" />
+  <meta property="og:title" content="JAEHOON's Portfolio" />
+  <meta property="og:description" content="웹개발자 신재훈의 포트폴리오입니다" />
   <meta property="og:site_name" content="개발자 신재훈의 포트폴리오입니다" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
